[tool.poetry]
name = "realtimedatavis"
version = "0.1.0"
description = ""
authors = ["orlogan <orlogan7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^1.24.3"
pandas = "^2.0.2"
matplotlib = "^3.7.1"
alpha-vantage = "^2.3.1"
seaborn = "^0.12.2"
scipy = "^1.10.1"
mplfinance = "^0.12.10b0"
boto3 = "^1.28.27"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
